--- a/public/docs.html
+++ b/public/docs.html
@@ -304,7 +304,7 @@
 </a>
 <div class="collapse" id="ui-consultas">
 <ul class="nav flex-column sub-menu"> 
-<li class="nav-item">EM BREVE...</li>
+<li class="nav-item">EM BREVE..</li>
 
 	
 </ul>
